--- a/frontend/src/modules/Home/components/ResumeUploadBox/ResumeUploadBox.module.css
+++ b/frontend/src/modules/Home/components/ResumeUploadBox/ResumeUploadBox.module.css
@@ -1,6 +1,7 @@
 .container {
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(255, 255, 255 0.1);
     backdrop-filter: blur(5px);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
     margin-top: 3rem;
 
@@ -8,17 +9,17 @@
 }
 
 .button {
-    background: linear-gradient(90deg, rgb(83, 32, 178) 17%, rgb(135, 70, 165) 92%);
+    background: #58CC5F;
     transition: all 0.6s ease;
 
     &[data-disabled="true"],
     &[data-disabled="true"]:hover {
-        background: rgb(156, 152, 152);
+        background: rgba(88, 204, 95, 0.6);
         color: white;
     }
 
     &:hover {
-        background: linear-gradient(90deg, rgb(80, 20, 192) 17%, rgb(118, 54, 147) 92%);
+        background: #42a148;
     }
 }
 
