--- a/frontend/src/modules/Home/Home.module.css
+++ b/frontend/src/modules/Home/Home.module.css
@@ -23,6 +23,8 @@
     font-size: 3rem;
     color: #2e2e2e;
 
+    z-index: 1;
+
     @media(min-width: $mantine-breakpoint-sm) {
         font-size: 5rem;
     }
@@ -43,14 +45,28 @@
 
 .interview_icon {
     position: absolute;
-    top: -50px;
+    top: -10px;
     left: -40px;
-    width: 400px;
+    z-index: -3;
+
+    max-width: 400px;
+    width: 100%;
+
+    @media(max-width: 1070px) {
+        display: none;
+    }
 }
 
 .hiring_icon {
     position: absolute;
     top: 30px;
     right: -30px;
-    width: 400px;
+    z-index: -5;
+
+    max-width: 400px;
+    width: 100%;
+
+    @media(max-width: 1070px) {
+        display: none;
+    }
 }
